# natis

./: .env.template  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  fine.json  mysite_data.json  pyproject.toml  requirements.txt  requirments.txt  setup.py  tailwind.config.js
accounts/: urls.py  views.py
apps/accounts/: views.py
apps/exam/: admin.py  forms.py  models.py  urls.py  views.py
apps/exam/migrations/: 0001_initial.py  0002_alter_historicalquestion_question_and_more.py  0003_alter_historicalquestion_section_and_more.py
apps/fine/: admin.py  apps.py  models.py
apps/notifications/: models.py
apps/pages/: urls.py  views.py
config/: settings.py  urls.py  wsgi.py
config/nginx/: default.conf.template
config/settings/: base.py  dev.py  prod.py  production.py
exam/: admin.py  forms.py  models.py  urls.py  views.py
pages/: urls.py  views.py
static/css/: datatables.css  output.css
static/js/: charts.js  datatables.min.js
staticfiles/: staticfiles.json
staticfiles/js/: datatables.424aacad2ee9.js  htmx.js  tailwind.ab7d48cbce53.js
templates/: 404.html  500.html  _base.html  index.html
templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key_done.html  signup.html
templates/account/email/: base_message.txt  password_reset_message.txt
templates/account/partial/: login.html  logout.html
templates/announcements/: detail.html  list.html
templates/cotton/: button.html  h1.html  h2.html  h3.html  h4.html  loader.html  modal.html
templates/exam/: choose_license_type.html  choose_questionnaire.html  exam_result.html  index.html  review_exam.html  rules.html  take_exam.html
templates/fine/: table.html
templates/includes/: footer.html  navbar.html
templates/pages/: about.html  changelog.html  contact.html  index.html  license.html  privacy.html
utils/: views.py
